--- a/source/blog.html.erb
+++ b/source/blog.html.erb
@@ -12,4 +12,6 @@ title: "Blog"
         </div>
     </div>
 </section>
+<section class="content-wrap">
 <%= partial(:list_blog_posts, :locals => {:blog => :blog}) %>
+</section>
