--- a/source/hike/2017-07-22-vernal-nevada-fall.html.markdown.erb
+++ b/source/hike/2017-07-22-vernal-nevada-fall.html.markdown.erb
@@ -1,22 +1,20 @@
 ---
 
-title: Lake Aloha
-date: 2017-07-29 PDT
+title: Vernal &amp; Nevada Falls
+date: 2017-07-22 PDT
 header_img: /hike/2017-07-29-lake-aloha/header.jpg
-end_date: 2017-07-30 PDT
 tags: backpacking, california, tahoe, desolation-wilderness
 state: California
-park:
-area: Desolation Wilderness
+park: Yosemite National Park
 miles: 14.7
 trail_type: In-and-Out
 rating: 8
-trailhead: Echo Lakes
+trailhead: Happy Isles
 elevation: 7415
 elevation_gain: 2132
 blurb: >
     The most popular destination in the Desolation Wilderness, and for good reason.
-    A beautiful overnighter to a spectacular alpine lake flanked by the Crystal Range.
+    A beautiful hike to a spectacular alpine lake flanked by the Crystal Range.
 ---
 We essentially stayed on the PCT the entire way. Here's the route we took:
 
