--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,7 +10,9 @@ header_img: /img/home/header2.jpg
       <div class="masthead-home-tagline">
         <div>
           <h1 class="animated slideInDown">Hi, I&rsquo;m Stanley.</h1>
-          <h3 class="animated slideInDown"><em>(music, the outdoors, photography, life)</em></h3>
+          <h3 class="animated slideInDown"><em>// music, the great outdoors, photography,  life //</em></h3>
+          <!-- <h3 class="animated slideInDown"><em>music. the great outdoors. photography. life.</em></h3> -->
+
         </div>
       </div>
     </div>
@@ -21,26 +23,22 @@ header_img: /img/home/header2.jpg
     <p>
     I'm a senior at the Massachusetts Institute of Technology, working towards a major in Computer Science
     with a minor in Music (concentrating in theory &amp; composition).
+    I've interned at Dropbox, Google, Facebook, and Jane Street.
     </p>
 
     <p>
     <b>Music keeps me sane&hellip;</b> I've played the piano for most of my life,
-    and I love to improvise. I'm currently trying to learn to
-    incorporate more jazz elements into my playing.
+    and I love to improvise. Currently trying to learn to learn jazz piano.
     Sometimes, I <a href="#">arrange</a> or <a href="#">compose</a> music.
-    Other times, I noodle around on my guitar or ukelele.
+    Other times, I noodle around on my guitar or ukelele. I wish I could sing well.
     </p>
 
-    <p class>
+    <p class="no-margin-bottom">
     <b>&hellip;but what I love most is exploring the outdoors.</b>
     I'm addicted. There's nothing more satisfying and liberating than
-    being out in the wilderness, relying on nothing but the contents of my backpack.
-    I recently started a <a href="/hikes">trip journal</a>. It's mostly
-    to help me keep track of everything, but I hope others find it useful!
-    </p>
-    <p class="no-margin-bottom">
-    I have a lot of stuff on my bucket list. One day I hope to hike the John Muir Trail.
-    I hope to climb a mountain. I hope to hike to Everest Base Camp.
+    being out in the wilderness, relying on nothing but friends &amp; the contents of my backpack.
+    I recently started a <a href="/hikes">hiking journal</a>. It's mostly
+    to help me keep track of all my experiences &amp; photos, but I hope you guys find it useful too! If not, I hope it at least inspires you to go outside and explore!
     </p>
   </div>
 </section>
@@ -50,14 +48,21 @@ header_img: /img/home/header2.jpg
 <section class="content-wrap" id="about2">
   <div class="body-text">
     <p>
-    <b>I also like to take pictures from time to time.</b>
+    <b>I also love to take pictures&hellip;</b>
+    mostly in an attempt to capture the indescribable beauty found on our planet.
+    It all started when I took a photography class my senior year of high school.
+    I love the idea of using photos to freeze time, to preserve memories, forever.
+    Photography (especially landscape) really forces you to slow down and
+    soak in your surroundings &mdash; it goes hand-in-hand with exploring the outdoors!
+    </p>
+    <p>
     I shoot on a Sony A6000 mirrorless with a Sony 35mm f/1.8 prime, (vintage) Minolta 50mm f/1.4 prime, and a Rokinon 12mm f/2.0 prime.
-    I love the idea of using photos to capture memories &amp; moments forever, and
-    I've had a lot of fun improving upon what I learned in my high school photography class.
-    All the photos on this website were taken by me.
+    The Rokinon is awesome &mdash; I've been trying
+    to improve my astrophotography, and its focal length and wide
+    aperture make it so much easier!
     </p>
     <p class="no-margin-bottom">
-    I hope to blog about my adventures and post tons of pictures.
+    All the photos on this website were taken by me. Hope you enjoy!
     </p>
   </div>
 </section>
@@ -66,156 +71,18 @@ header_img: /img/home/header2.jpg
 </section>
 <section class="content-wrap">
   <div class="body-text">
-    <p><b>Computers are pretty cool too.</b> Below is some things I've done.
-    Contact me if you want my resume.</p>
+  <p>
+    Below are a few recent posts from my hiking log! (the rest are <%= link_to 'here', '/hikes' %>)
+  </p>
   </div>
-  <div class="timeline-wrap">
-    <ul class="timeline">
-      <li>
-        <time>
-          <span>
-            Junior Year
-          </span>
-          <span>
-            Summer '17
-          </span>
-        </time>
-        <div class="waypoint"></div>
-        <div class="label">
-          <h2>Facebook &mdash; Software Engineering Internship</h2>
-          <span class="more">
-            <p>I worked on improving internal testing infrastructure.</p>
-          </span>
-        </div>
-      </li>
-      <li>
-        <time>
-          <span>
-            Sophomore Year
-          </span>
-          <span>
-            Summer '16
-          </span>
-        </time>
-        <div class="waypoint"></div>
-        <div class="label">
-          <h2>Google &mdash; Software Engineering Internship</h2>
-          <span class="more">
-            <p>I worked on an internal machine learning framework on the SearchAds team.</p>
-          </span>
-        </div>
-      </li>
-      <li>
-        <time>
-          <span>
-            Sophomore Year
-          </span>
-          <span>
-            January '16
-          </span>
-        </time>
-        <div class="waypoint"></div>
-        <div class="label">
-          <h2>Jane Street Capital &mdash; Software Engineering Internship</h2>
-          <span class="more">
-            <p>I worked on infrastructure for job scheduling.</p>
-          </span>
-        </div>
-      </li>
-      <li>
-        <time>
-          <span>
-            Freshman Year
-          </span>
-          <span>
-            Summer '15
-          </span>
-        </time>
-        <div class="waypoint"></div>
-        <div class="label">
-          <h2>Dropbox &mdash; Software Engineering Internship</h2>
-          <span class="more">
-            <p>I worked on Dropbox's new contacts infrastructure, which stores billions of contacts. Improved search quality, aggregation, and relevance.</p>
-          </span>
-        </div>
-      </li>
-      <li>
-        <time>
-          <span>
-            Freshman Year
-          </span>
-          <span>
-            January '15
-          </span>
-        </time>
-        <div class="waypoint"></div>
-        <div class="label">
-          <h2>NASDAQ &mdash; Data Science Externship</h2>
-          <span class="more">
-            <p>A team of 4 fellow MIT students and I built, tested, and pipelined a statistical model using R and Python to predict customer cancellations.</p>
-          </span>
-        </div>
-      </li>
-      <li>
-        <time>
-          <span>
-            High School
-          </span>
-          <span>
-            2010 &ndash; 2014
-          </span>
-        </time>
-        <div class="waypoint"></div>
-        <div class="label">
-          <h2>Competitive programming</h2>
-          <span class="more">
-            <p>I was a <a href="http://usaco.org/">USA Computing Olympiad</a> finalist in <a href="http://usaco.org/index.php?page=finalists12">2012</a> and <a href="http://usaco.org/index.php?page=finalists13">2013</a>.</p>
-          </span>
-        </div>
-      </li>
-      <li>
-        <time>
-          <span>
-            High School
-          </span>
-          <span>
-            2013
-          </span>
-        </time>
-        <div class="waypoint"></div>
-        <div class="label">
-          <h2>MIT CSAIL &mdash; Research</h2>
-          <span class="more">
-            <p>Conducted research on visualization strategies in collaborative temporal planning through the prestigious <a href="http://www.cee.org/news/research-science-institute-mit-hosts-81-high-school-students">Research Science Institute</a> program at the MIT Computer Science and Artificial Intelligence Laboratory.</p>
-          </span>
-        </div>
-      </li>
-      <li>
-        <time>
-          <span>
-            3<sup>rd</sup> grade
-          </span>
-          <span>
-            Mar '05
-          </span>
-        </time>
-        <div class="waypoint"></div>
-        <div class="label">
-          <h2>Started learning how to program</h2>
-          <span class="more">
-            <p>When &amp; where it all began! I taught myself by reading <i>C: How to Program</i> by Deitel.</p>
-          </span>
-        </div>
-      </li>
-    </ul>
-  </div>
+  <%= partial(:list_hike_posts, :locals => {:recent => 4}) %>
 </section>
 <section id="contact">
   <div class="contact-img"><div class="darken-filter"></div></div>
   <div class="stuff">
     <div class="wrap">
       <div class='body-text'>
-        <h1>Drop me a line! Just fill this out&hellip;</h1>
+        <h1>Questions? Comments? Just fill this out&hellip;</h1>
         <div id="contact_form">
           <form>
             <input type="hidden" name="salt" id="salt" />
@@ -241,9 +108,9 @@ header_img: /img/home/header2.jpg
         </div>
         <h1>&hellip;or find me on&hellip;</h1>
         <ul class='more-contact'>
-          <li><a href="http://github.com/scen">github</a></li>
-          <li><a href="https://www.linkedin.com/in/stanleycen">linkedin</a></li>
           <li><a href="mailto:hello@stanleycen.com">hello@stanleycen.com</a></li>
+          <li><a href="https://www.linkedin.com/in/stanleycen">linkedin</a></li>
+          <li><a href="http://github.com/scen">github</a></li>
         </ul>
       </div>
     </div>
