--- a/source/_list_blog_posts.erb
+++ b/source/_list_blog_posts.erb
@@ -1,23 +1,28 @@
-<section class="content-wrap blog-all">
-    <div class='posts-wrap body-text'>
-        <% blog(locals[:blog]).articles.each do |article| %>
-            <div class='blog-post'>
-                <article>
-                    <div class='post-details'>
-                        <div class='metadata'>
-                            <time><%= article.date.strftime("%B %d, %Y") %></time>
-                            <h1><a href="<%= article.url %>"><%= article.title %></a></h1>
-                        </div>
+<%
+@articles = blog(:blog).articles
+if !locals[:recent].nil?
+    @articles = @articles[0...locals[:recent]]
+end
+%>
+
+<div class='posts-wrap body-text'>
+    <% @articles.each do |article| %>
+        <div class='blog-post'>
+            <article>
+                <div class='post-details'>
+                    <div class='metadata'>
+                        <time><%= article.date.strftime("%B %d, %Y") %></time>
+                        <h1><a href="<%= article.url %>"><%= article.title %></a></h1>
                     </div>
-                    <% if article.data.header_img %>
-                    <div class='post-image'>
+                </div>
+                <% if article.data.header_img %>
+                    <div class='post-image' style="background-image: url('<%= url_for article.data.header_img %>');">
                     </div>
-                    <% end %>
-                    <div class='summary'>
-                        <%= article.summary %>
-                    </div>
-                </article>
-            </div>
-        <% end %>
-    </div>
-</section>
+                <% end %>
+                <div class='summary'>
+                    <%= article.summary %>
+                </div>
+            </article>
+        </div>
+    <% end %>
+</div>
