--- a/source/blog/2013-08-26-mac-osx-code-injection.html.markdown.erb
+++ b/source/blog/2013-08-26-mac-osx-code-injection.html.markdown.erb
@@ -4,9 +4,12 @@ title: Mac OS X code injection &amp; reverse engineering
 tags: reverse-engineering
 
 ---
-READMORE
 It turns out that injecting arbitrary native code into a process on OS X is almost as easy
-as it is on Windows. I wrote a small utility based on the `rentzsch/mach_star` project called [osxinj](http://github.com/scen/osxinj) which allows a user to inject a `.dylib` module into any running process. I also created [libembryo](http://github.com/scen/libembryo), a reverse engineering library for OS X.
+as it is on Windows.
+
+READMORE
+
+I wrote a small utility based on the `rentzsch/mach_star` project called [osxinj](http://github.com/scen/osxinj) which allows a user to inject a `.dylib` module into any running process. I also created [libembryo](http://github.com/scen/libembryo), a reverse engineering library for OS X.
 
 ### Code injection
 
