--- a/source/blog/2017-08-06-redesign.html.markdown.erb
+++ b/source/blog/2017-08-06-redesign.html.markdown.erb
@@ -1,7 +1,23 @@
 ---
-title: Yet another website redesign
+title: New design, new me
 tags: life
+header_img: /img/home/header2.jpg
 ---
 
-It's safe to say my interests have changed significantly
-since the time I last updated this site, 2 years ago.
+I redesigned this site again.
+READMORE
+
+It essentially was an online version of my resume --
+there wasn't much content except a few technical posts I'd written in high school.
+
+But my priorities have changed a bit
+since the time I last updated this site almost two years ago. I've rekindled my interest in photography. I'm minoring in music now.
+And living in California the past two summers with a car meant that I was able to
+more fully
+explore and fall in love with the rugged beauty of the outdoors&hellip; the mountain splendor of the Sierra Nevada.
+And with 10+ backpacking and camping trips in the past year alone,
+I wanted a way to record/share my experiences and photography online.
+The hope is that others will find the trip reports useful too!
+
+So that's that. I hope to continue blogging about my adventures, and hope that
+you find it useful or get inspired to hit the trail!
