--- a/source/hike/2017-06-10-kelly-lake.html.markdown.erb
+++ b/source/hike/2017-06-10-kelly-lake.html.markdown.erb
@@ -1,22 +1,22 @@
 ---
 
-title: Lake Aloha
-date: 2017-07-29 PDT
+title: Kelly Lake
+date: 2017-06-10 PDT
 header_img: /hike/2017-07-29-lake-aloha/header.jpg
-end_date: 2017-07-30 PDT
+end_date: 2017-06-11 PDT
 tags: backpacking, california, tahoe, desolation-wilderness
 state: California
-park:
-area: Desolation Wilderness
+park: Henry Coe State Park
+area:
 miles: 14.7
 trail_type: In-and-Out
 rating: 8
-trailhead: Echo Lakes
+trailhead: Hunting Hollow
 elevation: 7415
 elevation_gain: 2132
 blurb: >
     The most popular destination in the Desolation Wilderness, and for good reason.
-    A beautiful overnighter to a spectacular alpine lake flanked by the Crystal Range.
+    A beautiful hike to a spectacular alpine lake flanked by the Crystal Range.
 ---
 We essentially stayed on the PCT the entire way. Here's the route we took:
 
