--- a/source/hike/2017-07-29-lake-aloha.html.markdown.erb
+++ b/source/hike/2017-07-29-lake-aloha.html.markdown.erb
@@ -10,7 +10,7 @@ park:
 area: Desolation Wilderness
 miles: 14.7
 trail_type: In-and-Out
-rating: 8
+rating: 9
 trailhead: Echo Lakes
 elevation: 7415
 elevation_gain: 2132
@@ -20,9 +20,11 @@ blurb: >
 ---
 We essentially stayed on the PCT the entire way. Here's the route we took:
 
-<%= image(:src => url_for("2017-07-29-lake-aloha/topo.jpg"), :caption => "Topo map") %>
+<%= image(:src => url_for("2017-07-29-lake-aloha/topo.jpg"), :caption => "Topographic map") %>
 
 # Trip Report
+
+### Day 1
 
 We departed for the El Dorado Ranger Station from San Francisco at 5:00am on Saturday
 in order to get the last minute first-come, first-served overnight permits.
@@ -34,4 +36,41 @@ permits for Lake Aloha (Zone 33).
 Parking near the trailhead was was a nightmare -- everything was full. We ended up parking alongside the road
 approximately .5 miles away from the actual trailhead.
 
-The actual trail was pretty uneventful.
+The trail was easy to find, and there weren't too many snowbanks
+left on the trail itself.
+The ones that were left didn't require any special equipment
+to across. Just follow signs for
+PCT and Lake Aloha. There's so many people on the trail that you can't lose
+your away.
+
+We spent some time looking for a good place to set up camp.
+We wanted something that was isolated, flat, far enough from water (leave no trace!),
+and had a good view of the Crystal Range towering over the lake.
+
+I noticed that a lot of people set up camp near the south to south-east
+shore of the lake. This part is pretty forested, and the views aren't as good.
+If you hike 0.5 to 1 mile along the eastern shore you'll find tons of good spots.
+
+Mosquitos were a lot better than expected. There were definitely
+swarms with thousands of mosquitos, but most of them didn't bite.
+The breeze next to the lake definitely helps.
+I used a headnet, but it wasn't necessary, except maybe after sunset.
+
+The sunset was amazing. Every single time, without fail, I'm taken
+aback by the beauty of an alpine sunset. There's definitely a reason why
+John Muir called the Sierra Nevada the "Range of Light".
+
+We went to bed around 10pm, and I set my alarm for 3am so I could attempt
+to photograph the Milky Way over the Crystal Range.
+
+### Day 2
+
+I slept without a rain fly, so when I opened my eyes at 3am I was blown
+away. The stars shined so so bright, and I could see the Milky
+Way (**OUR OWN GALAXY!!!!**) with my own naked eyes!
+It was truly unforgettable.
+I spent almost 2 hours staring and taking photos.
+There wasn't any wind at 3am, and the water was perfectly still.
+I'm super proud of this photo I managed to capture:
+
+.
