--- a/source/hike/2017-06-10-kelly-lake.html.markdown.erb
+++ b/source/hike/2017-06-10-kelly-lake.html.markdown.erb
@@ -2,36 +2,37 @@
 
 title: Kelly Lake
 date: 2017-06-10 PDT
-header_img: /hike/2017-07-29-lake-aloha/header.jpg
+header_img: /hike/2017-06-10-kelly-lake/header.jpg
 end_date: 2017-06-11 PDT
-tags: backpacking, california, tahoe, desolation-wilderness
+tags: backpacking, california, henry-coe
 state: California
 park: Henry Coe State Park
 area:
-miles: 14.7
+miles: 14
 trail_type: In-and-Out
-rating: 8
+rating: 7
 trailhead: Hunting Hollow
-elevation: 7415
-elevation_gain: 2132
+elevation: 880
+elevation_gain: 2698
 blurb: >
-    The most popular destination in the Desolation Wilderness, and for good reason.
-    A beautiful hike to a spectacular alpine lake flanked by the Crystal Range.
+    A nice, secluded overnighter near the Bay Area.
 ---
-We essentially stayed on the PCT the entire way. Here's the route we took:
 
-<%= image(:src => url_for("2017-07-29-lake-aloha/topo.jpg"), :caption => "Topo map") %>
+Take the Steer Ridge trail from the Hunting Hollow Entrance,
+then take the left fork to Steer Ridge Road.
+After a bit, take a left onto the Wilson Peak trail.
+Then take a left onto the Grizzly Gulch trail.
+Then a right onto the Dexter Trail, then left onto Wasno Road.
+After a bit, take a right onto Kelly Lake trail and descend to the
+lake. See [here](http://coepark.net/pineridgeassociation/documents/maps/gilroy_entrances/coe_gilroy_entrances.pdf)
+for a more detailed map.
+
+<%= image(:src => url_for("2017-06-10-kelly-lake/topo.jpg"), :caption => "Topo map", :width => 500) %>
 
 # Trip Report
 
-We departed for the El Dorado Ranger Station from San Francisco at 5:00am on Saturday
-in order to get the last minute first-come, first-served overnight permits.
-The station opens at 8am, and although we arrived at 7:15am,
-there were already 4-5 groups ahead of us!
-In the end, everything worked out. We managed to snatch the last 2
-permits for Lake Aloha (Zone 33).
+I originally wanted to do a trip into the Sierras but due
+to the heavy snowpack I didn't want to risk going out there so early,
+especially given the trail condition updates and photos people posted.
 
-Parking near the trailhead was was a nightmare -- everything was full. We ended up parking alongside the road
-approximately .5 miles away from the actual trailhead.
-
-The actual trail was pretty uneventful.
+So I decided to do my first solo trip, just to see what it was all about.
