--- a/source/hike/2017-07-22-vernal-nevada-fall.html.markdown.erb
+++ b/source/hike/2017-07-22-vernal-nevada-fall.html.markdown.erb
@@ -1,35 +1,63 @@
 ---
 
-title: Vernal &amp; Nevada Falls
+title: Vernal &amp; Nevada Falls (2017)
 date: 2017-07-22 PDT
-header_img: /hike/2017-07-29-lake-aloha/header.jpg
-tags: backpacking, california, tahoe, desolation-wilderness
+extra_dates:
+    - 2017-07-04 PDT
+    - 2017-06-11 PDT
+header_img: /hike/2017-07-22-vernal-nevada-fall/header.jpg
+tags: hiking, california, yosemite
 state: California
 park: Yosemite National Park
-miles: 14.7
+miles: 7
 trail_type: In-and-Out
-rating: 8
+rating: 10
 trailhead: Happy Isles
-elevation: 7415
-elevation_gain: 2132
+elevation: 4000
+elevation_gain: 1900
 blurb: >
-    The most popular destination in the Desolation Wilderness, and for good reason.
-    A beautiful hike to a spectacular alpine lake flanked by the Crystal Range.
+    This hike is so awesome, I did it three times this summer. Which
+    adds up to six times in my life. I think that says a lot.
 ---
-We essentially stayed on the PCT the entire way. Here's the route we took:
+You don't need a map -- just follow the crowd. Take the John Muir Trail down from
+Nevada to save your knees and get a picturesque view of
+Liberty Cap and Nevada Fall!
 
-<%= image(:src => url_for("2017-07-29-lake-aloha/topo.jpg"), :caption => "Topo map") %>
+I made three camping trips out to Yosemite this summer.
+And every single time I went, I hiked this trail. So this'll
+just be a combined report.
 
 # Trip Report
 
-We departed for the El Dorado Ranger Station from San Francisco at 5:00am on Saturday
-in order to get the last minute first-come, first-served overnight permits.
-The station opens at 8am, and although we arrived at 7:15am,
-there were already 4-5 groups ahead of us!
-In the end, everything worked out. We managed to snatch the last 2
-permits for Lake Aloha (Zone 33).
+The record snowfall in the Sierras this year meant that
+the waterfalls were epicly swollen and raging.
+This photo was taken from the
+Vernal Fall footbridge. Even though I'd already been here 3 times before my June 2017 trip,
+I'd never seen the Merced River like this.
 
-Parking near the trailhead was was a nightmare -- everything was full. We ended up parking alongside the road
-approximately .5 miles away from the actual trailhead.
+<%= image(:src => url_for("2017-07-22-vernal-nevada-fall/swollen.jpg"), :caption => "You don't wanna fall into this") %>
 
-The actual trail was pretty uneventful.
+In June, we went up pretty early in the morning at around 8:30am, and there I
+witnessed some of the most beautiful light I'd ever seen. The sun streaming
+through the mist created some awesome "God rays".
+
+<%= image(:src => url_for("2017-07-22-vernal-nevada-fall/godrays.jpg"), :caption => "We looked up and saw this.") %>
+
+<%= image(:src => url_for("2017-07-22-vernal-nevada-fall/rays.jpg"), :caption => "Spectacular.") %>
+
+The photos aren't that sharp, since my lens was completely covered in water. Honestly,
+my camera probably sustained some water damage since it was getting _SOAKED_.
+
+<%= image(:src => url_for("2017-07-22-vernal-nevada-fall/nevada.jpg"), :caption => "Nevada Fall was raging as well", :width => 500) %>
+
+As you descend from Nevada Fall via the John Muir Trail, you're rewarded
+with an amazing view of Libery Cap and Nevada Fall.
+
+<%= image(:src => url_for("2017-07-22-vernal-nevada-fall/libcap.jpg"), :caption => "Inspiring.") %>
+
+And if you can stay after sunset at the top of Nevada Fall, you gotta!
+It's spectacular. Literally no one else does it, since you have to hike the 4 mile
+descent to the valley floor in the dark. But it's so worth it&hellip; I'll
+let this picture speak for itself.
+
+<%= image(:src => url_for("2017-07-22-vernal-nevada-fall/sunset.jpg"), :caption => "...") %>
