--- a/source/hike/2017-07-23-clouds-rest.html.markdown.erb
+++ b/source/hike/2017-07-23-clouds-rest.html.markdown.erb
@@ -3,7 +3,7 @@
 title: Clouds Rest
 date: 2017-07-23 PDT
 header_img: /hike/2017-07-23-clouds-rest/header.jpg
-tags: backpacking, california, yosemite
+tags: hiking, california, yosemite
 state: California
 park: Yosemite National Park
 area:
@@ -18,3 +18,69 @@ blurb: >
     and the park's backcountry.
 
 ---
+<%= image(:src => url_for("2017-07-23-clouds-rest/topo.jpg"), :caption => "Topographic map", :width => 500) %>
+
+Bring lots of water! I brought 3L and a water filter. When we hiked it, there were plenty
+of water sources (streams and a lake) along the way to filter.
+
+We were actually hesistant to do this hike, because this was during the Detwiler Fire of 2017.
+Conditions were awful the days before we arrived, but the smoke fully cleared!
+As an added bonus, the threat of smoke meant that fewer people visited the park. Silver lining!
+
+# Trip Report
+
+After camping in Yosemite Valley the night before, we woke up at 6am, ate breakfast, broke camp,
+and departed for Tenaya Lake. We hit the trail at 8:15am -- follow signs for
+_Sunrise High Sierra Camp_. You'll immediately hit a creek crossing. It was knee deep when we
+crossed, but a just a few weeks earlier when Tioga Pass opened I heard it was waist deep.
+Mosquitos feasted on me here, and for the next 2 miles. They seemed immune to DEET.
+
+<%= image(:src => url_for("2017-07-23-clouds-rest/creek_crossing.jpg"), :caption => "Tenaya Creek crossing", :width => 500) %>
+
+Around 1.5 miles in we hit a brutal set of switchbacks climbing Sunrise mountain.
+Apparently it gains 1000 ft in less than a mile.
+
+<%= image(:src => url_for("2017-07-23-clouds-rest/climb.jpg"), :caption => "The climb up Sunrise Mountain", :width => 500) %>
+
+There was still snow on the trail at some points, and we lost the trail a few times. In the end
+we just decided to keep hiking in an upward direction.
+
+<%= image(:src => url_for("2017-07-23-clouds-rest/whereistrail.jpg"), :caption => "Where's the trail?") %>
+
+At the top, there'll be a Y fork. Take the right one.
+
+<%= image(:src => url_for("2017-07-23-clouds-rest/fork.jpg"), :caption => "2.5 miles in!", :width => 500) %>
+
+The trail descends steeply for a bit, then meanders through a nice shaded forest for a few
+flat miles. There's a beautiful backcountry pond along the way that's super pretty.
+
+<%= image(:src => url_for("2017-07-23-clouds-rest/pond.jpg"), :caption => "Unnamed pond") %>
+
+Eventually you get to another fork in the trail. Take the right one again!
+From now on the trail is just going to climb steadily until the summit. Somewhere
+along this section you'll finally get a glimpse of Clouds Rest.
+
+<%= image(:src => url_for("2017-07-23-clouds-rest/see.jpg"), :caption => "That little nub is the summit of Clouds Rest", :width => 500) %>
+
+Around 2 miles later, we started climbing the summit ridge. It was pretty insane.
+The ridge was super thin, and there were sheer dropoffs on both sides -- one into
+Yosemite Valley, and one into Tenaya Canyon. Hopefully you're not scared of heights!
+The views were beyond belief though. It makes Half Dome look so small!
+
+<%= image(:src => url_for("2017-07-23-clouds-rest/summit_ridge.jpg"), :caption => "Summit ridge of Clouds Rest, looking upwards") %>
+
+The summit actually widens to something less insane at the end (thankfully). There were
+around 10-15 people on the summit when we arrived at 11:15am, we all fit comfortably
+with lots of room to spare!
+
+<%= image(:src => url_for("2017-07-23-clouds-rest/valleyview.jpg"), :caption => "The view into the Valley") %>
+
+We spent an hour and a half chilling on the summit. Marmots and flies kept us company.
+We had to force ourselves to leave because otherwise we wouldn't get back to
+San Francisco in time. But not before taking some final pictures!
+
+<%= image(:src => url_for("2017-07-23-clouds-rest/header.jpg"), :caption => "Looking back towards Tenaya Lake") %>
+
+See that lake in the distance? That's Tenaya Lake. We started there!
+
+And that's a wrap. Until next time, Yosemite!
