--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -10,8 +10,7 @@ header_img: /img/home/header2.jpg
       <div class="masthead-home-tagline">
         <div>
           <h1 class="animated slideInDown">Hi, I&rsquo;m Stanley.</h1>
-          <h3 class="animated slideInDown"><em>// music, the great outdoors, photography,  life //</em></h3>
-          <!-- <h3 class="animated slideInDown"><em>music. the great outdoors. photography. life.</em></h3> -->
+          <h3 class="animated slideInDown"><em>// outdoor adventures, music, photography //</em></h3>
 
         </div>
       </div>
@@ -23,7 +22,8 @@ header_img: /img/home/header2.jpg
     <p>
     I'm a senior at the Massachusetts Institute of Technology, working towards a major in Computer Science
     with a minor in Music (concentrating in theory &amp; composition).
-    I've interned at Dropbox, Google, Facebook, and Jane Street.
+    Unless something dramatically changes, I'm gonna be a software engineer.
+    In the past, I've interned at Dropbox, Google, Facebook, and Jane Street.
     </p>
 
     <p>
