--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -23,6 +23,9 @@
         background: url("<%= get_header_image(current_page) %>");
       }
     </style>
+    <script type="text/javascript">
+var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDomainName","stanleycen.com"]),_gaq.push(["_trackPageview"]),function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();
+    </script>
   </head>
   <body>
     <div id="container">
