--- a/source/_hike_info.erb
+++ b/source/_hike_info.erb
@@ -9,7 +9,7 @@
         <%= hike_maybe_show_row('Area', @hike[:area]) %>
         <%= hike_maybe_show_row('Distance', @hike[:miles], 'mi') %>
         <%= hike_maybe_show_row('Starting elevation', @hike[:elevation], 'ft') %>
-        <%= hike_maybe_show_row('Elevation gain', @hike[:elevation_gain], 'ft') %>
+        <%= hike_maybe_show_row('Total elevation gain', @hike[:elevation_gain], 'ft') %>
         <%= hike_maybe_show_row('Type', @hike[:trail_type]) %>
         <%= hike_maybe_show_row('Trailhead', @hike[:trailhead]) %>
         <%= hike_maybe_show_row('Rating', @hike[:rating]) %>
