--- a/source/hike/2017-07-15-pct-section.html.markdown.erb
+++ b/source/hike/2017-07-15-pct-section.html.markdown.erb
@@ -1,35 +1,67 @@
 ---
 
-title: CA Section K
+title: CA Section K near Donner Summit
 date: 2017-07-15 PDT
-header_img: /hike/2017-07-29-lake-aloha/header.jpg
-tags: backpacking, california, tahoe, desolation-wilderness
+header_img: /hike/2017-07-15-pct-section/header.jpg
+tags: backpacking, california, tahoe, donner-lake
 state: California
-miles: 14.7
+miles: 3
 trail_type: In-and-Out
 area: Pacific Crest Trail
 rating: 8
-trailhead: Happy Isles
-elevation: 7415
-elevation_gain: 2132
+trailhead: Off Donner Pass Rd.
+elevation: 7017
+elevation_gain: 500
 blurb: >
-    The most popular destination in the Desolation Wilderness, and for good reason.
-    A beautiful hike to a spectacular alpine lake flanked by the Crystal Range.
+    A short jaunt to a few peaks overlooking Donner Lake and the city of Truckee, CA.
+    Bonus: there's a wooden rope swing on a tree near the end!
 ---
-We essentially stayed on the PCT the entire way. Here's the route we took:
+We followed the PCT at the beginning, but quickly went off trail to explore.
+It's not hard to find the trail again, even without GPS or map/compass.
 
-<%= image(:src => url_for("2017-07-29-lake-aloha/topo.jpg"), :caption => "Topo map") %>
+<%= image(:src => url_for("2017-07-15-pct-section/topo.jpg"), :caption => "Topo map") %>
 
 # Trip Report
 
-We departed for the El Dorado Ranger Station from San Francisco at 5:00am on Saturday
-in order to get the last minute first-come, first-served overnight permits.
-The station opens at 8am, and although we arrived at 7:15am,
-there were already 4-5 groups ahead of us!
-In the end, everything worked out. We managed to snatch the last 2
-permits for Lake Aloha (Zone 33).
+This trip wasn't even supposed to happen. Long story short,
+our original destination was the Desolation Wilderness but
+we got into an accident on I-80 East near Soda Springs.
+We had to get towed into Truckee, where all the
+body shops closed for the weekend. It was nearing 3pm,
+and we were still stuck in Truckee. Luckily,
+a kind stranger named Chris, an avid hiker from the area,
+helped us find alternative plans, and went out of his way to give us a ride
+to the trailhead. Thanks Chris!
 
-Parking near the trailhead was was a nightmare -- everything was full. We ended up parking alongside the road
-approximately .5 miles away from the actual trailhead.
+We made the most of it though. A quick hike led us to Catfish Lake,
+a pond full of Chinese Catfish. According to Chris they were [put there
+100+ years ago](http://tahoetopia.com/news/places-chinese-catfish-pond-near-donner-pass) by Chinese railroad workers. We also passed by Lake Angela, a huge reservoir.
 
-The actual trail was pretty uneventful.
+After a bit of climbing, we got to this amazing overlook of Donner Lake.
+Someone had installed a rope swing here!
+
+<%= image(:src => url_for("2017-07-15-pct-section/swing.jpg"), :caption => "Rope swing", :width => 500) %>
+
+We were treated to one of the most spectacular sunsets I'd ever seen before. It looked like
+the sky was literally on fire. I know it looks super saturated, but I assure you,
+the sky literally looked like this. I don't even know what to say.
+
+<%= image(:src => url_for("2017-07-15-pct-section/fire.jpg"), :caption => "The sky's on fire!") %>
+
+As night fell, I played around with some long exposures. This one was exposed for
+25 seconds. You can see the cars on I-80 East, the town of Truckee, and the cabins
+surrounding the lake!
+
+<%= image(:src => url_for("2017-07-15-pct-section/night.jpg"), :caption => "Moody.") %>
+
+We also played with some astrophotography! We climbed to a nearby peak
+to get this awesome photo of some stars. The light pollution was surpisingly low, and
+we spent a lot of time just laying down and stargazing.
+
+<%= image(:src => url_for("2017-07-15-pct-section/stars.jpg"), :caption => "Feeling insignificant.") %>
+
+The next day, we had to hitchhike back into town. It was our first time,
+so we were actually pretty excited. We actually got picked up within 10 minutes
+by this nice couple who were also returning from a hike.
+
+<%= image(:src => url_for("2017-07-15-pct-section/hitchhike.jpg"), :caption => "Hitchin' a ride") %>
