--- a/source/hike/2017-07-29-lake-aloha.html.markdown.erb
+++ b/source/hike/2017-07-29-lake-aloha.html.markdown.erb
@@ -51,14 +51,20 @@ I noticed that a lot of people set up camp near the south to south-east
 shore of the lake. This part is pretty forested, and the views aren't as good.
 If you hike 0.5 to 1 mile along the eastern shore you'll find tons of good spots.
 
-Mosquitos were a lot better than expected. There were definitely
+<%= image(:src => url_for("2017-07-29-lake-aloha/campsite.jpg"), :caption => "Our campsite") %>
+
+Mosquitos were a lot better than expected! There were definitely
 swarms with thousands of mosquitos, but most of them didn't bite.
 The breeze next to the lake definitely helps.
 I used a headnet, but it wasn't necessary, except maybe after sunset.
 
 The sunset was amazing. Every single time, without fail, I'm taken
-aback by the beauty of an alpine sunset. There's definitely a reason why
+aback by the beauty of an alpine sunset. It's no wonder why
 John Muir called the Sierra Nevada the "Range of Light".
+
+<%= image(:src => url_for("2017-07-29-lake-aloha/sunset.jpg"), :caption => "Sunset over the Crystal Range") %>
+
+<%= image(:src => url_for("2017-07-29-lake-aloha/sunset_behind.jpg"), :caption => "Last light on the peak behind our camp") %>
 
 We went to bed around 10pm, and I set my alarm for 3am so I could attempt
 to photograph the Milky Way over the Crystal Range.
@@ -70,7 +76,22 @@ away. The stars shined so so bright, and I could see the Milky
 Way (**OUR OWN GALAXY!!!!**) with my own naked eyes!
 It was truly unforgettable.
 I spent almost 2 hours staring and taking photos.
-There wasn't any wind at 3am, and the water was perfectly still.
-I'm super proud of this photo I managed to capture:
+Conditions were perfect -- here wasn't any wind at 3am, and the water was perfectly still.
+I'm super proud of this photo.
 
-.
+<%= image(:src => url_for("2017-07-29-lake-aloha/milkyway.jpg"), :caption => "Milky Way over Lake Aloha") %>
+
+I went to sleep around 5am and set an alarm for 5:30am to watch the sunrise.
+Super worth!
+I actually left my tripod there overnight so I managed to capture the same scene
+at sunrise.
+
+<%= image(:src => url_for("2017-07-29-lake-aloha/header.jpg"), :caption => "Sunrise over Lake Aloha") %>
+
+We had breakfast shortly afterwards, broke camp, and quickly hiked
+back to the trailhead before temperatures started climbing.
+
+This was probably my last backpacking trip into the Sierras for the season, since
+I'm finishing up my internship and going back home soon.
+I wish I'd gone on more trips this summer! It's such a shame the season started
+so late due to insane snowfall. Until next year!
